練習component組件的用法

--- a/index.html
+++ b/index.html
@@ -4,24 +4,22 @@
 	<meta charset="UTF-8">
 	<title>Simple Computer</title>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.8/dist/vue.js"></script>
+	<link rel="stylesheet" type="text/css" href="Computer.css">
 </head>
 <body>
-	<div id="cur">
-		<b>台幣:</b><br><input type="" name="" v-model="NT" placeholder="請輸入台幣...">
-		<ul>
-			<!-- <li v-for="coun in countrys">
-				{{coun.country}}:{{calu}}
-			</li> -->
-			<li>美金: {{US}}</li>
-			<li>日幣: {{JP}}</li>
-			<li>港幣: {{HK}}</li>
-			<li>歐元: {{EU}}</li>
-			<li>韓幣: {{KR}}</li>
-		</ul>
+<div id="main">
+	<div class="btns">
+		<input type="button" value="Rate" @click="currentView = 'channel1'">
+		<input type="button" value="BMI" @click="currentView = 'channel2'">
+		<!-- <input type="button" value="chnnel3"> -->
 	</div>
-	<div id="bmi">
-		
+	<div id="panel">
+		<component :is="currentView"></component>
 	</div>
+</div>
+
+
 </body>
 <script type="text/javascript" src="Computer.js"></script>
+<script type="text/javascript" src="conponent.js"></script>
 </html>
